Modification de la méthode GestionnaireFichier - le type de consommation d'une maison doit etre en majuscules uniquement.